[FIXED] Followers List's Names Alignment

--- a/public/common/profile.css
+++ b/public/common/profile.css
@@ -272,19 +272,9 @@ nav {
 /* Friends List */
 .friendslist {
     display: flex;
-    flex-direction: row;
+    align-items: center; 
+    gap: 10px; 
     line-height: 1rem;
-}
-
-.friendslist hr {
-    margin-right: 0px;
-    margin-left: auto;
-}
-
-.friendslist ul {
-    list-style-type: none !important;
-    padding: 0px !important;
-    margin: 0px !important;   
 }
 
 .friendslist img {
@@ -292,8 +282,13 @@ nav {
     object-position: center center;
     width: 50px;
     height: 50px;
-    margin-right: 20px;
-    border-radius: 50px;    
+    margin-right: 10px;
+    border-radius: 50px;
+}
+
+.friendslist p {
+    margin: 0; 
+    line-height: normal; 
 }
 
 /* Horizontal Rules */
